--- a/saitae-web/src/main/webapp/pages/permiso.xhtml
+++ b/saitae-web/src/main/webapp/pages/permiso.xhtml
@@ -102,7 +102,7 @@
                             </h:panelGrid>
                         </p:tab>
                         <p:tab title="Conceder Permiso A Estudiantes">
-                            <h:panelGrid columns="2" style="height: 1000px;">
+                            <h:panelGrid columns="2">
                                 <p:outputLabel for="mod" value="Bachillerato: "/>
                                 <p:selectOneMenu id="mod" immediate="true" required="true" style="width: 400px;"
                                                  value="#{administraciónPermisoController.gradoPK.gradoModalidad}">
