--- a/saitae-web/src/main/webapp/pages/permisoE.xhtml
+++ b/saitae-web/src/main/webapp/pages/permisoE.xhtml
@@ -12,7 +12,7 @@
 
             <ui:define name="content">
                 <h:form id="frm">
-                    <p:panel header="Solicitud de Permisos" style="margin: 0 auto; align-content: center;">
+                    <p:panel header="Solicitud de Permisos">
                         <h:panelGrid columns="3">
                             <p:outputLabel for="tp" value="Tipo de permiso a solicitar: "/>
                             <p:selectOneMenu id="tp" immediate="true" required="true" style="width: 400px;"
