--- a/saitae-web/src/main/webapp/pages/permisoM.xhtml
+++ b/saitae-web/src/main/webapp/pages/permisoM.xhtml
@@ -1,19 +1,19 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
+
+
+      <ui:composition template="./../WEB-INF/template/plantilla1.xhtml"
+      xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 
-    <body>
-
-        <ui:composition template="./../WEB-INF/template/plantilla1.xhtml">
-
             <ui:define name="content">
                 <h:form id="form">
                     <h1>Solicitud de Permisos Y Licencias</h1>
-                    <h:panelGrid columns="2" cellpadding="10" cellspacing="10"> 
+                    <p:panel style="width: 50%; margin: 0 auto">
+                    <h:panelGrid columns="2" > 
                         <p:outputLabel value="Tipo de permiso a solicitar"/>  
                         <p:selectOneMenu converter="omnifaces.SelectItemsConverter" required="true" 
                                          value="#{permisoMaController.p.tipoPermiso1}" style="width: 190px">
@@ -45,7 +45,7 @@
                                          update=":form0:msgs form"/>
 
                     </h:panelGrid>
-
+                    </p:panel>
 
 
                 </h:form> 
@@ -55,5 +55,4 @@
 
         </ui:composition>
 
-    </body>
-</html>
+
