--- a/saitae-web/src/main/webapp/pages/permisoM.xhtml
+++ b/saitae-web/src/main/webapp/pages/permisoM.xhtml
@@ -11,8 +11,9 @@
 
             <ui:define name="content">
                 <h:form id="form">
-                    <h1>Solicitud de Permisos Y Licencias</h1>
-                    <p:panel style="width: 50%; margin: 0 auto">
+                     <p:panel style="width: 50%; margin: 0 auto" >
+                         <h1 style="text-align: center" >Solicitud de Permisos Y Licencias</h1>
+                   
                     <h:panelGrid columns="2" > 
                         <p:outputLabel value="Tipo de permiso a solicitar"/>  
                         <p:selectOneMenu converter="omnifaces.SelectItemsConverter" required="true" 
