--- a/saitae-web/src/main/webapp/pages/cvista.xhtml
+++ b/saitae-web/src/main/webapp/pages/cvista.xhtml
@@ -38,8 +38,8 @@
 
                                 <p:column headerText="Índice">
                                     <p:cellEditor>
-                                        <f:facet name="output"><h:outputText value="#{a.accesoIndice.idacceso}" /></f:facet>
-                                        <f:facet name="input"><p:selectOneMenu id="console" value="#{a.accesoIndice.idacceso}" 
+                                        <f:facet name="output"><h:outputText value="#{a.accesoIndice.accesoNombre}" /></f:facet>
+                                        <f:facet name="input"><p:selectOneMenu id="console" value="#{a.accesoIndice.accesoNombre}" 
                                                                                style="width:125px" title="Seleccione un tipo ">
                                                 <f:selectItems value="#{vistasMenuController.accesosItems}"/>
                                             </p:selectOneMenu>
