--- a/saitae-web/src/main/webapp/pages/paquetes.xhtml
+++ b/saitae-web/src/main/webapp/pages/paquetes.xhtml
@@ -37,7 +37,7 @@
                         <p:commandButton id="summit" value="Guardar" 
 
                                          actionListener="#{paquetesController.guardar()}" 
-                                         update=":form1:msgs form1"/>
+                                         update=":form1"/>
             </h:panelGrid>  
             
                 
